--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,4 @@ junitVersion=4.13.2
 mockitoKotlinVersion=4.0.0
 testCoreVersion=1.4.0
 pagingVersion=3.0.0
+org.gradle.unsafe.configuration-cache=true
